--- a/src/features/landing/landing-layout/landing-layout.component.html
+++ b/src/features/landing/landing-layout/landing-layout.component.html
@@ -4,16 +4,17 @@
   </button>
 </div>
 
-<div class="d-flex flex-row w-100 h-100 justify-content-between align-items-stretch">
-    <div class="d-flex w-100">
-        <div class="col-2 p-2 bg-light border" [class.collapse]="navbarCollapsed">
-          <app-navigation></app-navigation>
-        </div>
+<div class="d-flex w-100 h-100">
 
-        <div class="flex-fill col-10 p-4 overflow-auto">
-          <router-outlet></router-outlet>
-        </div>
+    <div class="d-flex col w-100">
+      <div class="col-2 p-4 bg-light border" [class.collapse]="navbarCollapsed">
+        <app-navigation></app-navigation>
+      </div>
+      <div class="col-10">
+        <router-outlet></router-outlet>
+      </div>
     </div>
+
 </div>
 
 
