--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,9 @@
 /* Error: Can't find stylesheet to import.
  *   ,
- * 1 | @import "node_modules/bootstrap/scss/mixins/banner";
- *   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+ * 3 | @import "node_modules/bootstrap/scss/functions";
+ *   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  *   '
- *   styles\bootstrap.scss 1:9  @import
+ *   styles\bootstrap.scss 3:9  @import
  *   styles.scss 2:9            root stylesheet */
 
 body::before {
@@ -14,5 +14,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: Can't find stylesheet to import.\a   \2577 \a 1 \2502  @import \"node_modules/bootstrap/scss/mixins/banner\";\d\a   \2502          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\a   \2575 \a   styles\\bootstrap.scss 1:9  @import\a   styles.scss 2:9            root stylesheet";
+  content: "Error: Can't find stylesheet to import.\a   \2577 \a 3 \2502  @import \"node_modules/bootstrap/scss/functions\";\d\a   \2502          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\a   \2575 \a   styles\\bootstrap.scss 3:9  @import\a   styles.scss 2:9            root stylesheet";
 }
