jira projects add board & modal page

--- a/src/features/landing/components/navigation/navigation.component.html
+++ b/src/features/landing/components/navigation/navigation.component.html
@@ -32,7 +32,9 @@
       <a routerLink="/admin" class="btn btn-outline-primary text-start">
         <i class="bi bi-person"></i> Admin
       </a>
-
+      <a routerLink="/example" class="btn btn-outline-primary text-start">
+        <i class="bi bi-behance"></i> Example
+      </a>
     </div>
   </div>
 
