--- a/src/features/landing/landing-layout/landing-layout.component.html
+++ b/src/features/landing/landing-layout/landing-layout.component.html
@@ -7,10 +7,10 @@
 <div class="d-flex w-100 h-100">
 
     <div class="d-flex col w-100">
-      <div class="col-2 p-4 bg-light border" [class.collapse]="navbarCollapsed">
+      <div class="col-md-2 p-4 bg-light border" [class.collapse]="navbarCollapsed">
         <app-navigation></app-navigation>
       </div>
-      <div class="col-10">
+      <div class="col-md-10">
         <router-outlet></router-outlet>
       </div>
     </div>
