--- a/src/features/jira/pages/board-view/board-view.component.html
+++ b/src/features/jira/pages/board-view/board-view.component.html
@@ -3,28 +3,31 @@
   Board Silindi
 </ng-template>
 
-<div class="d-flex justify-content-center align-items-center my-4">
-  <button (click)="openCardDialog()" class="btn btn btn-primary">Yeni Kard Ekle</button>
-</div>
 
+<div class="d-flex justify-content-center align-items-center bg-light border border-primary rounded-3 my-4">
 
-<div class="card" style="width: 18rem;" *ngFor="let card of boardService.boards[boardIndex].cards; let i=index">
-  <div class="card-body">
-    <h5 class="card-title">{{card.title}}</h5>
-    <div class="card-text">
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-          <label class="form-check-label" for="flexCheckDefault">
-            test
-           <!-- *ngFor="let checkbox of cards.checklist; let ci=index;"
-            [(ngModel)]=card.status[ci]"  {{checkbox}}-->
-          </label>
-        </div>
+    <div class="d-flex justify-content-center align-items-center my-2">
+      <button (click)="openCardDialog()" class="btn btn btn-primary">Yeni Kart Ekle</button>
     </div>
 
-    <button (click)="deleteCard(i, dangerTpl)" class="btn btn-warning">Kartı Sil</button>
-    <button (click)="editCard(i,card)" class="btn btn-primary">Kartı Güncelle</button>
-  </div>
+    Kartlar buraya gelecek (Modal a data çekmede sorun var, cards lar gelmiyor)
+    <div class="card" style="width: 18rem;" *ngFor="let card of boardService.boards[boardIndex].cards; let i=index">
+      <div class="card-body">
+        <h5 class="card-title">{{card.title}}</h5>
+        <div class="card-text">
+            <div class="form-check" *ngFor="let checkbox of card.checklist; let ci=index;">
+              <input [(ngModel)]="card.status[ci]" class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+              <label class="form-check-label" for="flexCheckDefault">
+                 {{checkbox}}
+              </label>
+            </div>
+        </div>
+
+        <button (click)="deleteCard(i, dangerTpl)" class="btn btn-warning">Kartı Sil</button>
+        <button (click)="editCard(i,card)" class="btn btn-primary">Kartı Güncelle</button>
+      </div>
+    </div>
+
 </div>
 
 <app-toasts aria-live="polite" aria-atomic="true"></app-toasts>
