--- a/src/features/jira/pages/boards/boards-modal/boards-modal.component.html
+++ b/src/features/jira/pages/boards/boards-modal/boards-modal.component.html
@@ -13,7 +13,7 @@
         <label class="form-label">Başlık</label>
         <div class="input-group has-validation">
             <span class="input-group-text rounded-0"><i class="bi bi-info-circle"></i></span>
-            <input formControlName="title" type="title" id="boardTitle" class="form-control" aria-describedby="inputGroupPrepend">
+            <input formControlName="title" type="text" id="boardTitle" class="form-control" aria-describedby="inputGroupPrepend">
             <div class="invalid-feedback">
               * Zorunlu alan
             </div>
