blog site list and dialog

--- a/src/features/card/card.component.html
+++ b/src/features/card/card.component.html
@@ -1,5 +1,5 @@
 <!-- 2. ÖRN COMPONENTE DATA GEÇME -->
-<div class="w-full flex-fill col-12 p-4 overflow-auto container">
+<div class="container w-full flex-fill col-12 p-4 overflow-auto">
   <h4 class="col-md-12">Cards (@Input) </h4>
   <div class="d-flex row">
     <!-- cardStart -->
