--- a/src/features/jira/navigation/navigation.component.html
+++ b/src/features/jira/navigation/navigation.component.html
@@ -1,7 +1,4 @@
 <nav class="navbar navbar-light p-2" style="background-color: #e3f2fd;">
-  <a routerLink="./">Home</a>
-  <a routerLink="./boards">Boards</a>
-  <a routerLink="./">xxx</a>
-  <a routerLink="./">yyy</a>
-  <a routerLink="./">zzz</a>
+  <a routerLink="./"> <i class="bi bi-house"></i> Home</a>
+  <!-- <a routerLink="./boards">Boards</a> -->
 </nav>
