--- a/src/features/landing/components/navigation/navigation.component.html
+++ b/src/features/landing/components/navigation/navigation.component.html
@@ -4,8 +4,11 @@
       <a routerLink="/" class="btn btn-outline-primary text-start" aria-current="page">
         <i class="bi bi-house"></i> Home
       </a>
-      <a routerLink="/about" class="btn btn-outline-primary text-start">
-        <i class="bi bi-chat-left"></i> About
+      <a routerLink="/jira" class="btn btn-outline-primary text-start">
+        <i class="bi bi-kanban"></i> Jira
+      </a>
+      <a routerLink="/blog" class="btn btn-outline-primary text-start">
+        <i class="bi bi-chat-left"></i> Blog
       </a>
       <a class="btn btn-outline-primary text-start" data-bs-toggle="collapse" (click)="collapseSubMenu()" role="button" aria-expanded="false" aria-controls="collapseMenu">
         <i class="bi bi-kanban"></i> Projects
@@ -23,9 +26,6 @@
           </a>
         </div>
       </div>
-      <a routerLink="/jira" class="btn btn-outline-primary text-start">
-        <i class="bi bi-kanban"></i> Jira
-      </a>
       <a routerLink="/contact" class="btn btn-outline-primary text-start">
         <i class="bi bi-telephone"></i> Contact
       </a>
