--- a/src/features/jira/pages/board-view/board-view.component.html
+++ b/src/features/jira/pages/board-view/board-view.component.html
@@ -4,13 +4,12 @@
 </ng-template>
 
 
-<div class="d-flex justify-content-center align-items-center bg-light border border-primary rounded-3 my-4">
+  <div class="d-flex justify-content-center align-items-center my-2">
+    <button (click)="openCardDialog()" class="btn btn btn-primary">Yeni Kart Ekle</button>
+  </div>
 
-    <div class="d-flex justify-content-center align-items-center my-2">
-      <button (click)="openCardDialog()" class="btn btn btn-primary">Yeni Kart Ekle</button>
-    </div>
-
-    Kartlar buraya gelecek (Modal a data çekmede sorun var, cards lar gelmiyor)
+<div class="d-flex justify-content-center align-items-center bg-light border border-primary rounded-3 my-4 p-2">
+     Kartlar buraya gelecek (Modal a data çekmede sorun var, cards lar gelmiyor)
     <div class="card" style="width: 18rem;" *ngFor="let card of boardService.boards[boardIndex].cards; let i=index">
       <div class="card-body">
         <h5 class="card-title">{{card.title}}</h5>
@@ -27,7 +26,6 @@
         <button (click)="editCard(i,card)" class="btn btn-primary">Kartı Güncelle</button>
       </div>
     </div>
-
 </div>
 
 <app-toasts aria-live="polite" aria-atomic="true"></app-toasts>
