--- a/src/features/blog/blog-modal/blog-modal.component.html
+++ b/src/features/blog/blog-modal/blog-modal.component.html
@@ -12,7 +12,7 @@
 <div class="modal-body" *ngIf="!isUpdate"> <!-- isUpdate False olduğu durumda çalışacak / Görüntüle -->
   <div class="row">
     <div class="col-md-4">
-      <img src="assets/images/image{{imageUrl}}.jpg" alt="Blog" class="w-100 h-auto">
+      <img src="../assets/images/image{{imageUrl}}.jpg" alt="Blog" class="w-100 h-auto">
     </div>
     <div class="col-md-8">
       {{title}}
