--- a/src/features/landing/components/navigation/navigation.component.html
+++ b/src/features/landing/components/navigation/navigation.component.html
@@ -24,6 +24,9 @@
           <a routerLink="/card" class="btn btn-light text-black text-start">
             <i class="bi bi-plus"></i> Card
           </a>
+          <a routerLink="/methods" class="btn btn-light text-black text-start">
+            <i class="bi bi-plus"></i> Array Methods
+          </a>
         </div>
       </div>
       <a routerLink="/contact" class="btn btn-outline-primary text-start">
