--- a/src/features/jira/pages/board-view/board-view-modal/board-view-modal.component.html
+++ b/src/features/jira/pages/board-view/board-view-modal/board-view-modal.component.html
@@ -13,7 +13,7 @@
     <div class="col-md-12 mb-3">
       <label class="form-label">Başlık</label>
       <div class="input-group">
-        <span class="input-group-text rounded-0"><i class="bi bi-info-circle"></i></span>
+        <span class="input-group-text"><i class="bi bi-info-circle"></i></span>
         <input [(ngModel)]="title" type="text" id="boardTitle" class="form-control" aria-describedby="inputGroupPrepend">
       </div>
     </div>
@@ -22,7 +22,7 @@
       <div class="col-md-12 mb-3">
         <label class="form-label">Task {{i+1}}</label>
         <div class="input-group">
-          <span class="input-group-text rounded-0"><i class="bi bi-info-circle"></i></span>
+          <span class="input-group-text"><i class="bi bi-info-circle"></i></span>
           <input [(ngModel)]="tasks[i]" type="text" id="boardTask" class="form-control" aria-describedby="inputGroupPrepend">
           <button (click)="deleteTask(i)" class="btn btn-primary"><i class="bi bi-trash"></i></button>
         </div>
