--- a/src/features/display-photo/display-photo.component.html
+++ b/src/features/display-photo/display-photo.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-center align-items-center">
   <h4>Rast gele resim bastırma</h4>
   <button (click)="onClick()" class="btn-primary">Yeni Resim</button>
-  <img ngSrc="photoUrl">
+  <img [src]="photoUrl">
 </div>
