--- a/src/features/landing/components/navigation/navigation.component.html
+++ b/src/features/landing/components/navigation/navigation.component.html
@@ -7,6 +7,9 @@
       <a routerLink="/jira" class="btn btn-outline-primary text-start">
         <i class="bi bi-kanban"></i> Jira
       </a>
+      <a routerLink="/article" class="btn btn-outline-primary text-start">
+        <i class="bi bi-kanban"></i> Article
+      </a>
       <a routerLink="/blog" class="btn btn-outline-primary text-start">
         <i class="bi bi-chat-left"></i> Blog
       </a>
