--- a/src/features/array-methods/array-methods.component.html
+++ b/src/features/array-methods/array-methods.component.html
@@ -38,7 +38,7 @@
     <ul>
       <li>Slice (dilimleme) metodu bir dizinin bir kısmının kopyasıyla yeni bir dizi oluşturmamıza olanak sağlıyor.</li>
       <li>Parantez içerisinde ise kopyalamak istediğimiz elemanların aralığını başlangıç ve bitiş indeksleri olacak şekilde iki parametre olarak giriyoruz. Bitiş indeksindeki değerin aralığa dahil olmadığını unutmayalım.</li>
-      <li>Bu metot uygulandığı dizinin orijinal halini değiştirmiyor bu yüzden yeni oluşacak diziyi farklı bir değişkende saklıyoruz.</li>
+      <li>Bu metot uygulandığı dizinin orijinal halini değiştirmiyor, bu yüzden yeni oluşacak diziyi farklı bir değişkende saklıyoruz.</li>
     </ul>
 
     <span class="fst-italic">Sonuç: {{yeniAlisverisListem | json}}</span>
