--- a/src/features/landing/components/navigation/navigation.component.html
+++ b/src/features/landing/components/navigation/navigation.component.html
@@ -30,6 +30,9 @@
           <a routerLink="/methods" class="btn btn-light text-black text-start">
             <i class="bi bi-plus"></i> Array Methods
           </a>
+          <a routerLink="/pipes" class="btn btn-light text-black text-start">
+            <i class="bi bi-plus"></i> Pipes
+          </a>
         </div>
       </div>
       <a routerLink="/contact" class="btn btn-outline-primary text-start">
