--- a/src/features/landing/components/navigation/navigation.component.html
+++ b/src/features/landing/components/navigation/navigation.component.html
@@ -4,6 +4,9 @@
       <a routerLink="/" class="btn btn-outline-primary text-start" aria-current="page">
         <i class="bi bi-house"></i> Home
       </a>
+      <a routerLink="/student" class="btn btn-outline-primary text-start">
+        <i class="bi bi-person"></i> Student
+      </a>
       <a routerLink="/jira" class="btn btn-outline-primary text-start">
         <i class="bi bi-kanban"></i> Jira
       </a>
