--- a/src/features/landing/components/navigation/navigation.component.html
+++ b/src/features/landing/components/navigation/navigation.component.html
@@ -33,6 +33,9 @@
           <a routerLink="/methods" class="btn btn-light text-black text-start">
             <i class="bi bi-plus"></i> Array Methods
           </a>
+          <a routerLink="/javascript" class="btn btn-light text-black text-start">
+            <i class="bi bi-plus"></i> Java Script
+          </a>
           <a routerLink="/pipes" class="btn btn-light text-black text-start">
             <i class="bi bi-plus"></i> Pipes
           </a>
